# zocket

./: .gitignore  .npmignore  LICENSE  README.md  benchmark-overhead.csv  benchmark-report.html  benchmark-results.csv  benchmark-security.csv  benchmark-security.html  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
docs/: AI_AUTODEPLOY.md  CLIENTS_MCP.md  GIT_NPM_RELEASE.md  INSTALL.md  LOCAL_MODELS.md  RELEASE_1_0_0.md  SOURCES.md
docs/superpowers/plans/: 2026-03-12-zocket-typescript-rewrite.md
docs/superpowers/specs/: 2026-03-12-zocket-typescript-rewrite-design.md
scripts/: ai-autodeploy.py  benchmark-export.mjs  benchmark-full.mjs  benchmark-long-context.mjs  benchmark-scenarios.mjs  benchmark-security.ts  benchmark-tokens.mjs  install-zocket.ps1  install-zocket.sh  migrate-from-python.py  migrate-import.mjs  publish-1.0.0.sh  release-check.sh
src/: api-registry.ts  audit.ts  auth.ts  cli.ts  config-file.ts  config.ts  crypto.ts  defence.ts  env-file.ts  i18n.ts  index.ts  keys.ts  mcp.ts  paths.ts  runner.ts  security.ts  tui.ts  vault.ts  web.ts
tests/: audit.test.ts  auth.test.ts  config.test.ts  crypto.test.ts  env-file.test.ts  i18n.test.ts  mcp.test.ts  paths.test.ts  runner.test.ts  security.test.ts  test_backup.py  test_i18n.py  test_mcp_modes.py  test_project_folders.py  test_web_first_run.py  vault.test.ts
zocket/: audit.py  auth.py  autostart.py  backup.py  cli.py  config_store.py  crypto.py  harden.py  i18n.py  mcp_server.py  paths.py  runner.py  vault.py  web.py
zocket/templates/: index.html  login.html
