[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zocket"
version = "1.0.0"
description = "Local MCP + web vault for project auth secrets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=43.0.0",
  "flask>=3.0.0",
  "keyring>=25.0.0",
  "mcp>=1.0.0",
  "waitress>=3.0.0",
]

[project.scripts]
zocket = "zocket.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["zocket*"]

[tool.setuptools.package-data]
zocket = ["templates/*.html"]
